--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -29,11 +29,13 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/dependencies/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
 
   <body>
+    <% include ../partials/navbar %>
     <%- body %>
 
 
@@ -105,6 +107,9 @@
 
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
+    <script src="/dependencies/jquery.min.js"></script>
+    <script src="/dependencies/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/dependencies/popper.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
