--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,24 +18,27 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-            <div class="nav-item">
-                <a href="/users/login" class="nav-link"><%= __('Login') %>  </a>
-            </div>
-            <div class="nav-item">
-                <a href="/users/sign_up" class="nav-link"><%= __('Sign up') %>  </a>
-            </div>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="myAccountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    <%= __('My account') %>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="myAccountDropdown">
-                    <a class="dropdown-item" href="/users/calendar"><%= __('Calendar') %></a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/users/update"><%= __('Update my account') %></a>
-                    <a class="dropdown-item" href="/users"><%= __('Log out') %></a>
+            <% if(me){ %>
+                <div class="nav-item">
+                    <a href="/users/login" class="nav-link"><%= __('Login') %>  </a>
                 </div>
-            </li>
+                <div class="nav-item">
+                    <a href="/users/sign_up" class="nav-link"><%= __('Sign up') %>  </a>
+                </div>
+            <% }else{ %>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="myAccountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        <%=  %>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="myAccountDropdown">
+                        <a class="dropdown-item" href="/users/calendar"><%= __('Calendar') %></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/users/update"><%= __('Update my account') %></a>
+                        <a class="dropdown-item" href="/users"><%= __('Log out') %></a>
+                    </div>
+                </li>
+            <% } %>
         </ul>
     </div>
 </nav>
