--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -35,6 +35,36 @@
   </head>
 
   <body>
+    <!-- Flash messages -->
+    <% if (messages && messages['error'].length > 0) { %>
+      <div class="alert alert-danger mb-0">
+        <% messages['error'].forEach(function(message) { %>
+          <strong><%= __('Error') %>: </strong>
+          <%= message %>
+        <% }) %>
+      </div>
+      
+    <% } %>
+    <% if (messages && messages['warning'].length > 0) { %>
+      <div class="alert alert-warning mb-0">
+      <% messages['warning'].forEach(function(message) { %>
+        <strong><%= __('Warning') %>: </strong >
+        <%= message %>
+      <% }) %>
+      </div>
+    <% } %>
+    <% if (messages && messages['success'].length > 0) { %>
+      <div class="alert alert-success mb-0">
+      <% messages['success'].forEach(function(message) { %>
+        <strong><%= __('Success') %>: </strong>
+        <%= message %>
+      <% }) %>
+      </div>
+    <% } %> 
+    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+    <!-- Expose locals to permit ajax requests (CSRF toke required) -->
+    <%- exposeLocalsToBrowser() %>
+
     <% include ../partials/navbar %>
     <%- body %>
 
@@ -110,6 +140,7 @@
     <script src="/dependencies/jquery.min.js"></script>
     <script src="/dependencies/bootstrap/js/bootstrap.min.js"></script>
     <script src="/dependencies/popper.min.js"></script>
+    <script src="/js/main.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
