--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -5,15 +5,15 @@
                 <div class="card-header bg-info text-light"><%= __('Login') %></div>
 
                 <div class="card-body">
-                    <form method="POST" action="">
+                    <form method="POST" action="/users/login">
                         <input type="hidden" name="_csrf" value="<%= _csrf %>" />
 
                         <div class="form-group row">
-                            <label for="email" class="col-sm-4 col-form-label text-md-right"><%= __('Email address') %></label>
+                            <label for="email" class="col-sm-4 col-form-label text-md-right"><%= __('Account number') %></label>
 
                             <div class="col-md-6">
-                                <input id="email" type="email" class="form-control" name="email"
-                                    required autofocus> 
+                                <input id="account_number" type="number" class="form-control" name="account_number" pattern="[0-9]{9}"
+                                    required autofocus value="<%= typeof(old) !== 'undefined' ? old.account_number : ''  %>"> 
                             </div>
                         </div>
 
@@ -26,6 +26,7 @@
                             </div>
                         </div>
 
+                        <!-- 
                         <div class="form-group row">
                             <div class="col-md-6 offset-md-4">
                                 <div class="checkbox">
@@ -34,7 +35,8 @@
                                     </label>
                                 </div>
                             </div>
-                        </div>
+                        </div> 
+                        -->
 
                         <div class="form-group row mb-4">
                             <div class="col-12 text-center">
