Materias y tutorias con funcionalidad limitada, algunas cosas reparadas y algunas otras rotas

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -13,7 +13,7 @@
 
                             <div class="col-md-6">
                                 <input id="account_number" type="number" class="form-control" name="account_number" pattern="[0-9]{9}"
-                                    required autofocus value="<%= typeof(old) !== 'undefined' ? old.account_number : ''  %>"> 
+                                    required autofocus value="<%= typeof(old) !== 'undefined' ? old.account_number : '317114270'  %>"> 
                             </div>
                         </div>
 
@@ -22,7 +22,7 @@
 
                             <div class="col-md-6">
                                 <input id="password" type="password" class="form-control" name="password"
-                                    required> 
+                                    required value="asd2412"> 
                             </div>
                         </div>
 
