--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -31,12 +31,20 @@
                         aria-expanded="false">
                         <%= user.name %>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="myAccountDropdown">
-                        <a class="dropdown-item" href="/users/calendar"><%= __('Calendar') %></a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/users/update"><%= __('Update my account') %></a>
-                        <a class="dropdown-item" id="logout"><%= __('Log out') %></a>
-                    </div>
+                    <% if(user.is_admin){ %>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="myAccountDropdown">
+                            <a href="/subjects/new" class="dropdown-item"><%= __('Add new subject') %></a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" id="logout"><%= __('Log out') %></a>
+                        </div>
+                    <% }else{ %>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="myAccountDropdown">
+                            <a class="dropdown-item" href="/users/calendar"><%= __('Calendar') %></a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/users/update"><%= __('Update my account') %></a>
+                            <a class="dropdown-item" id="logout"><%= __('Log out') %></a>
+                        </div>
+                    <% } %>
                 </li>
             <% } %>
         </ul>
