--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,9 +13,25 @@
             <li class="nav-item">
                 <a class="nav-link" href="/subjects"><%= __('Subjects') %></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/tutorships"><%= __('Tutorships') %></a>
-            </li>
+            <% if(user !== null && user.is_tutor) { %>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" id="tutorshipsDropdown" role="button" 
+                        data-toggle="dropdown" aria-haspopup="trye" aria-expanded="false">
+                        <%= __('Tutorships') %>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="tutorshipsDropdown">
+                        <a href="/tutorships" class="dropdown-item"><%= __('Tutorships') %></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/tutorships/new"><%= __('Offer tutorship') %></a>
+                        <a class="dropdown-item" href="/tutorships/manage"><%= __('Manage my tutorships') %></a>
+                    </div>
+                </li>
+
+            <% }else{ %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/tutorships"><%= __('Tutorships') %></a>
+                </li>
+            <% } %>
         </ul>
         <ul class="navbar-nav">
             <% if(user === null) { %>
@@ -27,8 +43,17 @@
                 </div>
             <% }else { %>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="myAccountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="notificationsDropdown" role="button" 
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-bell"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" id="notifications" aria-labelledby="notificationsDropdown">
+
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="myAccountDropdown" role="button" 
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <%= user.name %>
                     </a>
                     <% if(user.is_admin){ %>
