Tutorias con horarios, aceptar y rechazar, mostrar quienes estan en que horario

--- a/views/subjects/index.ejs
+++ b/views/subjects/index.ejs
@@ -8,7 +8,7 @@
                     </div>
                     <div class="card-footer">
                         Asesorias disponibles: 
-                        3
+                        <%= subject.available %>
                     </div>
                 </div>
             </div>
