--- a/views/tutorships/index.ejs
+++ b/views/tutorships/index.ejs
@@ -16,7 +16,7 @@
                         </small>
                     </div>
                     <div class="card-footer">
-                        Lugares disponibles: 
+                        Hoararios disponibles: 
                         <%= tutorship.available %>
                     </div>
                 </div>
