--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -33,6 +33,9 @@
     <link rel="stylesheet" href="/dependencies/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/locale/es.js"></script>
   </head>
 
   <body>
@@ -138,7 +141,6 @@
 
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
-    <script src="/dependencies/jquery.min.js"></script>
     <script src="/dependencies/bootstrap/js/bootstrap.min.js"></script>
     <script src="/dependencies/popper.min.js"></script>
     <script src="/js/main.js"></script>
