--- a/views/subjects/show.ejs
+++ b/views/subjects/show.ejs
@@ -1,18 +1,24 @@
 <div class="container-fluid">
     <h1><%= subject.title %></h1>
     <hr>
+    <h2>Tutores</h2>
     <% if(tutorships.length <= 0){ %>
         <span class="h3">Aun no hay asesorias para esta materia.</span>
     <% } %>
     <% for(tutorship of tutorships){ %>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-2">
-            <div class="card" style="cursor: pointer;">
+            <div class="card" style="cursor: pointer;" onclick="window.location.replace('/tutorships/<%= tutorship.id %>')">
+                <div class="card-header text-right py-0 text-light <%= tutorship.is_available ? 'bg-success' : 'bg-danger' %>">
+                    <small>
+                        <%= tutorship.is_available ? 'Disponible' : 'No Disponible' %>
+                    </small>
+                </div>
                 <div class="card-body">
-                    <h2>¿Quien la ofrece? <%= tutorship.id %></h2>
-                    <small class="text-right">Grupo de max. 5 personas</small>
+                    <h2><%= tutorship.owner.name %></h2>
                 </div>
                 <div class="card-footer">
-                    Lugares disponibles: 3
+                    Horarios disponibles: 
+                    <%= tutorship.available %>
                 </div>
             </div>
         </div>
