--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -33,9 +33,11 @@
     <link rel="stylesheet" href="/dependencies/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/locale/es.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.26.9/dist/sweetalert2.all.min.js"></script>
   </head>
 
   <body>
@@ -143,6 +145,7 @@
     <script src="/dependencies/sails.io.js"></script>
     <script src="/dependencies/bootstrap/js/bootstrap.min.js"></script>
     <script src="/dependencies/popper.min.js"></script>
+    <script src="/js/calendar.js"></script>
     <script src="/js/main.js"></script>
     <!--SCRIPTS END-->
   </body>
