Documentacion y eliminacion de archivos innecesarios

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -60,6 +60,7 @@
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="myAccountDropdown">
                             <a href="/subjects/new" class="dropdown-item"><%= __('Add new subject') %></a>
                             <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/users/update"><%= __('Update my account') %></a>
                             <a class="dropdown-item" id="logout"><%= __('Log out') %></a>
                         </div>
                     <% }else{ %>
